--- a/public/css/submit.css
+++ b/public/css/submit.css
@@ -80,7 +80,7 @@ img {
   flex-direction: column;
   position: relative;
   padding: 0 10px 0 10px;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
 }
 .input {
   height: 45px;
@@ -165,4 +165,9 @@ span a:hover {
     max-width: 420px;
     width: 100%;
   }
+}
+
+.form-control,
+.submit {
+  border-radius: 55px;
 }
