--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/index.css" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <title>Sign in & Sign up Form</title>
+  <title>WICKSPER</title>
 </head>
 
 <body>
