--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -1,28 +1,168 @@
-<%- include('partials/header') %>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
-  <div class="jumbotron text-center">
-    <div class="container">
-      <i class="fas fa-key fa-6x"></i>
-      <h1 class="display-3">You've Discovered My Secret!</h1>
-      <p class="secret-text">Jack Bauer is my hero.</p>
-      <hr>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Post your secret</title>
+  <link rel="icon" type="image/x-icon" href="ImagesKandy\favicon\landscape.png" />
+  <!-- boots trap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <!-- css style sheet -->
+  <link rel="stylesheet" href="css/secret.css" />
+  <!-- font styles -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Caveat:wght@700&family=Montserrat:wght@800&family=Neucha&family=Roboto:wght@300&family=Ubuntu:wght@300;400;500&display=swap"
+    rel="stylesheet" />
 
+  <!-- font awsome link -->
+  <script src="https://kit.fontawesome.com/2607c708ac.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.7/dist/tailwind.min.css" rel="stylesheet">
+</head>
 
-      <% users.forEach((user)=> { %>
+<body>
+  <div class="background_container">
+    <!-- navigation bar start -->
+    <div class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand ps-3 pb-3 navigation-bar-texts" href="#">WICKSPER</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto me-2 py-auto">
+          <li>
+            <a href="/logout" class="nav-link mx-3 navigation-bar-texts">Logout</a>
+          </li>
 
+          <li>
+            <form action="/submit" method="get">
+              <button type="submit" class="btn btn-outline-dark">Submit Secret</button>
+            </form>
 
-        <% user.secrets.forEach((secret)=> { %>
-          <p class="secret-text">
-            <%= secret %>
-          </p>
-          <% }) %>
-
-            <% }) %>
-
-
-              <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
-              <a class="btn btn-dark btn-lg" href="/submit" role="button">Submit a Secret</a>
+          </li>
+        </ul>
+      </div>
     </div>
+    <!-- navigation bar end -->
+    <h1 class="background_heading">SAY IT NOW</h1>
+    <hr class="bacground_topic_hr" />
   </div>
 
-  <%- include('partials/footer') %>
+
+
+
+  <!-- things to do -->
+
+
+
+
+  <div class="flex flex-col justify-center items-center type_writer_container">
+    <h1>
+      <a href="" class="typewrite" data-period="2000"
+        data-type='[ "Tell your secrets anonymously.","Your secrets are safe with me.", "Protecting your privacy is our top priority", "Post some It is fun." ]'>
+        <span class="wrap"></span>
+      </a>
+    </h1>
+
+  </div>
+
+  <div class="lg:grid lg:grid-cols-2 md:grid md:grid-cols-1 gap-4 things_to_do">
+
+
+
+
+    <div class="card">
+
+
+      <h2 class="card-title">WICKSPER <span class="sub_text"> by wicky</span></h2>
+      <p class="card-text">
+        "I once pretended to be a tour guide at a museum and led a group of strangers through the exhibits. They thought
+        I was official, and I never revealed my true identity."
+      </p>
+    </div>
+
+    <div class="card">
+
+      <h2 class="card-title">WICKSPER <span class="sub_text"> by wicky</span></h2>
+      <p class="card-text">
+        "In college, I borrowed my roommate's clothes without asking and accidentally spilled ink on them. I secretly
+        got them professionally cleaned and returned them like nothing happened."
+      </p>
+    </div>
+
+    <div class="card">
+
+      <h2 class="card-title">WICKSPER <span class="sub_text"> by wicky</span></h2>
+      <p class="card-text">
+        "During a camping trip, I convinced my friends that I'd seen a ghost in the woods. We spent the night scared out
+        of our wits, and I never confessed it was a prank."
+      </p>
+    </div>
+
+    <div class="card">
+
+      <h2 class="card-title">WICKSPER <span class="sub_text"> by wicky</span></h2>
+      <p class="card-text">
+        "When I was a kid, I accidentally knocked over a beehive and ran away. I never told anyone that I was the cause
+        of the 'mysterious' bee attack."
+      </p>
+    </div>
+
+    <!-- =================================================================================================    -->
+
+
+
+
+    <% users.forEach((user)=> { %>
+
+
+      <% user.secrets.forEach((secret)=> { %>
+        <div class="card">
+
+          <h2 class="card-title">WICKSPER <span class="sub_text"> by wicky</span></h2>
+          <p class="card-text">
+            <%= secret %>
+          </p>
+        </div>
+        <% }) %>
+
+          <% }) %>
+
+  </div>
+
+
+  <!-- ================================================================================= -->
+
+  </div>
+
+</body>
+<footer>
+  <h3>WICKSPER <span class="sub_text"> by wicky</span></h3>
+  <div class="social_icon_container">
+    <a href=""><i class="fa-brands fa-facebook social_media_icons"></i></a>
+    <a href=""><i class="fa-brands fa-instagram social_media_icons"></i></a>
+    <a href=""><i class="fa-brands fa-twitter social_media_icons"></i></a>
+    <a href=""><i class="fa-brands fa-youtube social_media_icons"></i></a>
+  </div>
+
+  <div class="copy_right">
+    <p class="copy_right_claim">
+      <i class="fa-sharp fa-solid fa-copyright"></i> &nbspCopy Right 2023
+      WICKSPER
+      <span class="sub_text"> by wicky</span>
+    </p>
+  </div>
+
+  <script src="js/secret.js"></script>
+</footer>
+
+
+</html>
