--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/submit.css">
-    <title>submit</title>
+    <title>Tell Now</title>
 </head>
 
 <body>
@@ -25,13 +25,17 @@
                 </div>
 
                 <div class="col-md-6 right side-image-1">
-                    <form action="/secrets" method="get">
+                    <form action="/submit" method="post">
                         <div class="input-box">
 
                             <header>Seacret<br>español</header>
                             <div class="input-field">
-                                <input type="text" class="form-control text-center" name="secret"
+                                <textarea id="paragraph" class="form-control " rows="10" cols="35" name="secret"
                                     placeholder="What's your secret?" required>
+
+                                </textarea>
+                                <!-- <input type="text" class="form-control text-center" name="secret"
+                                    placeholder="What's your secret?" required> -->
 
                             </div>
 
