--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,8 @@
   <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/index.css" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="img/icon1.svg" type="image/svg+xml">
   <title>WICKSPER</title>
 </head>
 
@@ -27,7 +29,7 @@
           <input type="submit" value="Login" class="btn solid" />
           <p class="social-text">Or Sign in with social platforms</p>
           <div class="social-media">
-            <a href="#" class="social-icon">
+            <a href="/auth/facebook" class="social-icon">
               <i class="fab fa-facebook-f"></i>
             </a>
             <a href="#" class="social-icon">
@@ -43,10 +45,10 @@
         </form>
         <form action="/register" method="POST" class="sign-up-form">
           <h2 class="title">Sign up</h2>
-          <div class="input-field">
+          <!-- <div class="input-field">
             <i class="fas fa-user"></i>
             <input type="text" placeholder="Username" />
-          </div>
+          </div> -->
           <div class="input-field">
             <i class="fas fa-envelope"></i>
             <input type="email" placeholder="Email" name="username" required>
@@ -58,7 +60,7 @@
           <input type="submit" class="btn" value="Sign up" />
           <p class="social-text">Or Sign up with social platforms</p>
           <div class="social-media">
-            <a href="#" class="social-icon">
+            <a href="/auth/facebook" class="social-icon">
               <i class="fab fa-facebook-f"></i>
             </a>
             <a href="#" class="social-icon">
@@ -80,8 +82,7 @@
         <div class="content">
           <h3>New here ?</h3>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis,
-            ex ratione. Aliquid!
+            Join with us.Want to share your secrets anonymously ?.We do not store your personal details.
           </p>
           <button class="btn transparent" id="sign-up-btn">
             Sign up
@@ -93,8 +94,7 @@
         <div class="content">
           <h3>One of us ?</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-            laboriosam ad deleniti.
+            You want to say something to your mom anonymously?.Hurry up sign in.Say it to the world buddy !
           </p>
           <button class="btn transparent" id="sign-in-btn">
             Sign in
