--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/submit.css">
-    <title>Tell Now</title>
+    <link rel="icon" href="img/icon1.svg" type="image/svg+xml">
+    <title>Submit Secret</title>
 </head>
 
 <body>
